--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             </div>
             <p class="rights">
                 &copy; This is a project from
-                <a href="https://devchallenges.io/challenges/xobQBuf8zWWmiYMIAZe0">
+                <a href="https://devchallenges.io/challenges/xobQBuf8zWWmiYMIAZe0" target="_blank">
                     devchallenges.io
                 </a>
             </p>
